--- a/index.html
+++ b/index.html
@@ -2,68 +2,10 @@
 <html>
     <head>
         <title>GBA Emulator</title>
+
         <meta charset="UTF-8" />
         <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
-        <!--Required Scripts-->
-        <script src="IodineGBA/includes/TypedArrayShim.js"></script>
-        <script src="IodineGBA/core/Cartridge.js"></script>
-        <script src="IodineGBA/core/DMA.js"></script>
-        <script src="IodineGBA/core/Emulator.js"></script>
-        <script src="IodineGBA/core/Graphics.js"></script>
-        <script src="IodineGBA/core/RunLoop.js"></script>
-        <script src="IodineGBA/core/Memory.js"></script>
-        <script src="IodineGBA/core/IRQ.js"></script>
-        <script src="IodineGBA/core/JoyPad.js"></script>
-        <script src="IodineGBA/core/Serial.js"></script>
-        <script src="IodineGBA/core/Sound.js"></script>
-        <script src="IodineGBA/core/Timer.js"></script>
-        <script src="IodineGBA/core/Wait.js"></script>
-        <script src="IodineGBA/core/CPU.js"></script>
-        <script src="IodineGBA/core/Saves.js"></script>
-        <script src="IodineGBA/core/sound/FIFO.js"></script>
-        <script src="IodineGBA/core/sound/Channel1.js"></script>
-        <script src="IodineGBA/core/sound/Channel2.js"></script>
-        <script src="IodineGBA/core/sound/Channel3.js"></script>
-        <script src="IodineGBA/core/sound/Channel4.js"></script>
-        <script src="IodineGBA/core/CPU/ARM.js"></script>
-        <script src="IodineGBA/core/CPU/THUMB.js"></script>
-        <script src="IodineGBA/core/CPU/CPSR.js"></script>
-        <script src="IodineGBA/core/graphics/Renderer.js"></script>
-        <script src="IodineGBA/core/graphics/RendererShim.js"></script>
-        <script src="IodineGBA/core/graphics/RendererProxy.js"></script>
-        <script src="IodineGBA/core/graphics/BGTEXT.js"></script>
-        <script src="IodineGBA/core/graphics/BG2FrameBuffer.js"></script>
-        <script src="IodineGBA/core/graphics/BGMatrix.js"></script>
-        <script src="IodineGBA/core/graphics/AffineBG.js"></script>
-        <script src="IodineGBA/core/graphics/ColorEffects.js"></script>
-        <script src="IodineGBA/core/graphics/Mosaic.js"></script>
-        <script src="IodineGBA/core/graphics/OBJ.js"></script>
-        <script src="IodineGBA/core/graphics/OBJWindow.js"></script>
-        <script src="IodineGBA/core/graphics/Window.js"></script>
-        <script src="IodineGBA/core/graphics/Compositor.js"></script>
-        <script src="IodineGBA/core/memory/DMA0.js"></script>
-        <script src="IodineGBA/core/memory/DMA1.js"></script>
-        <script src="IodineGBA/core/memory/DMA2.js"></script>
-        <script src="IodineGBA/core/memory/DMA3.js"></script>
-        <script src="IodineGBA/core/cartridge/SaveDeterminer.js"></script>
-        <script src="IodineGBA/core/cartridge/SRAM.js"></script>
-        <script src="IodineGBA/core/cartridge/FLASH.js"></script>
-        <script src="IodineGBA/core/cartridge/EEPROM.js"></script>
-        <script src="IodineGBA/core/cartridge/GPIO.js"></script>
-        <!--Add your webpage scripts below-->
-        <script src="user_scripts/AudioGlueCode.js"></script>
-        <script src="user_scripts/base64.js"></script>
-        <script src="user_scripts/CoreGlueCode.js"></script>
-        <script src="user_scripts/GfxGlueCode.js"></script>
-        <script src="user_scripts/GUIGlueCode.js"></script>
-        <script src="user_scripts/JoyPadGlueCode.js"></script>
-        <script src="user_scripts/ROMLoadGlueCode.js"></script>
-        <script src="user_scripts/SavesGlueCode.js"></script>
-        <script src="user_scripts/WorkerGfxGlueCode.js"></script>
-        <script src="user_scripts/WorkerGlueCode.js"></script>
-        <script src="user_scripts/XAudioJS/swfobject.js"></script>
-        <script src="user_scripts/XAudioJS/resampler.js"></script>
-        <script src="user_scripts/XAudioJS/XAudioServer.js"></script>
+
         <link rel="stylesheet" href="user_css/main.css" />
     </head>
     <body>
@@ -210,5 +152,67 @@
             </div>
             <span class="message" id="tempMessage"></span>
         </div>
+
+        <!--Required Scripts-->
+        <script src="IodineGBA/includes/TypedArrayShim.js" defer></script>
+        <script src="IodineGBA/core/Cartridge.js" defer></script>
+        <script src="IodineGBA/core/DMA.js" defer></script>
+        <script src="IodineGBA/core/Emulator.js" defer></script>
+        <script src="IodineGBA/core/Graphics.js" defer></script>
+        <script src="IodineGBA/core/RunLoop.js" defer></script>
+        <script src="IodineGBA/core/Memory.js" defer></script>
+        <script src="IodineGBA/core/IRQ.js" defer></script>
+        <script src="IodineGBA/core/JoyPad.js" defer></script>
+        <script src="IodineGBA/core/Serial.js" defer></script>
+        <script src="IodineGBA/core/Sound.js" defer></script>
+        <script src="IodineGBA/core/Timer.js" defer></script>
+        <script src="IodineGBA/core/Wait.js" defer></script>
+        <script src="IodineGBA/core/CPU.js" defer></script>
+        <script src="IodineGBA/core/Saves.js" defer></script>
+        <script src="IodineGBA/core/sound/FIFO.js" defer></script>
+        <script src="IodineGBA/core/sound/Channel1.js" defer></script>
+        <script src="IodineGBA/core/sound/Channel2.js" defer></script>
+        <script src="IodineGBA/core/sound/Channel3.js" defer></script>
+        <script src="IodineGBA/core/sound/Channel4.js" defer></script>
+        <script src="IodineGBA/core/CPU/ARM.js" defer></script>
+        <script src="IodineGBA/core/CPU/THUMB.js" defer></script>
+        <script src="IodineGBA/core/CPU/CPSR.js" defer></script>
+        <script src="IodineGBA/core/graphics/Renderer.js" defer></script>
+        <script src="IodineGBA/core/graphics/RendererShim.js" defer></script>
+        <script src="IodineGBA/core/graphics/RendererProxy.js" defer></script>
+        <script src="IodineGBA/core/graphics/BGTEXT.js" defer></script>
+        <script src="IodineGBA/core/graphics/BG2FrameBuffer.js" defer></script>
+        <script src="IodineGBA/core/graphics/BGMatrix.js" defer></script>
+        <script src="IodineGBA/core/graphics/AffineBG.js" defer></script>
+        <script src="IodineGBA/core/graphics/ColorEffects.js" defer></script>
+        <script src="IodineGBA/core/graphics/Mosaic.js" defer></script>
+        <script src="IodineGBA/core/graphics/OBJ.js" defer></script>
+        <script src="IodineGBA/core/graphics/OBJWindow.js" defer></script>
+        <script src="IodineGBA/core/graphics/Window.js" defer></script>
+        <script src="IodineGBA/core/graphics/Compositor.js" defer></script>
+        <script src="IodineGBA/core/memory/DMA0.js" defer></script>
+        <script src="IodineGBA/core/memory/DMA1.js" defer></script>
+        <script src="IodineGBA/core/memory/DMA2.js" defer></script>
+        <script src="IodineGBA/core/memory/DMA3.js" defer></script>
+        <script src="IodineGBA/core/cartridge/SaveDeterminer.js" defer></script>
+        <script src="IodineGBA/core/cartridge/SRAM.js" defer></script>
+        <script src="IodineGBA/core/cartridge/FLASH.js" defer></script>
+        <script src="IodineGBA/core/cartridge/EEPROM.js" defer></script>
+        <script src="IodineGBA/core/cartridge/GPIO.js" defer></script>
+
+        <!--Add your webpage scripts below-->
+        <script src="user_scripts/AudioGlueCode.js" defer></script>
+        <script src="user_scripts/base64.js" defer></script>
+        <script src="user_scripts/CoreGlueCode.js" defer></script>
+        <script src="user_scripts/GfxGlueCode.js" defer></script>
+        <script src="user_scripts/GUIGlueCode.js" defer></script>
+        <script src="user_scripts/JoyPadGlueCode.js" defer></script>
+        <script src="user_scripts/ROMLoadGlueCode.js" defer></script>
+        <script src="user_scripts/SavesGlueCode.js" defer></script>
+        <script src="user_scripts/WorkerGfxGlueCode.js" defer></script>
+        <script src="user_scripts/WorkerGlueCode.js" defer></script>
+        <script src="user_scripts/XAudioJS/swfobject.js" defer></script>
+        <script src="user_scripts/XAudioJS/resampler.js" defer></script>
+        <script src="user_scripts/XAudioJS/XAudioServer.js" defer></script>
     </body>
 </html>
