--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" href="user_css/main.css" />
     </head>
     <body>
-        <div id="container">
-            <div id="menu" class="paused">
+        <div id="container" class="paused">
+            <header id="menu">
                 <ul class="menu" id="menu_top">
                     <li>
                         File
@@ -128,10 +128,10 @@
                         </ul>
                     </li>
                 </ul>
-            </div>
-            <div id="main">
+            </header>
+            <main id="main">
                 <canvas class="canvas" id="emulator_target" width="240" height="160"></canvas>
-            </div>
+            </main>
             <div class="touch-controls">
                 <div class="touch-dpad">
                     <button id="touch-up">↑</button><br />
