turn SmoothScaling off by default

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         Settings
                         <ul>
                             <li><input type="checkbox" id="skip_boot" /> Skip Boot Intro</li>
-                            <li><input type="checkbox" id="toggleSmoothScaling" checked="checked" /> Smooth Scaling</li>
+                            <li><input type="checkbox" id="toggleSmoothScaling" /> Smooth Scaling</li>
                             <li><input type="checkbox" id="toggleDynamicSpeed" /> Dynamic Speed</li>
                             <li><input type="checkbox" id="offthread-cpu" checked="checked" /> CPU off-thread</li>
                             <li><input type="checkbox" id="offthread-gpu" checked="checked" /> GPU off-thread</li>
